--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "pre-entrega-1-backend--29.8.2023-",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1"
+  },
+  "description": ""
 }
