--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./src/app.js"
+    "start": "nodemon ./src/app.js",
+    "dev": " nodemon ./src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,6 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1"
   },
-  "description": ""
+  "description": "El presente, Proyecto de entrega realizado para curso de BACKEND - CODERHOUSE.",
+  "devDependencies": {}
 }
